# exform

./: .gitignore  LICENSE
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bbc4bafaa1d3_initial_models.py
backend/src/app/: main.py
backend/src/app/api/v1/: deps.py
backend/src/app/api/v1/endpoints/: auth.py  video.py
backend/src/app/controllers/: base.py  user.py  video.py
backend/src/app/core/: config.py  security.py
backend/src/app/db/: base.py  session.py
backend/src/app/exceptions/: __init__.py
backend/src/app/models/: __init__.py  analysis.py  user.py  video.py
backend/src/app/repositories/: base.py  user.py  video.py
backend/src/app/schemas/: analysis.py  user.py  video.py
backend/src/app/services/: base.py  user_service.py  video.py
backend/src/app/utils/: date.py  file_storage.py
